3-traefik/1-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: traefik
  name: beta
