3-traefik/6-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: beta
spec:
  rateLimit:
    average: 5
    burst: 5
    period: 1m

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: beta
spec:
  stripPrefix:
    prefixes:
      - "/"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: limit
  namespace: beta
spec:
  buffering:
    retryExpression: "ResponseCode()==500"
---

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: retry
  namespace: beta
spec:
  retry:
    attempts: 5
    initialInterval: 5000ms

---
